@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT([pcmanx-gtk2],[0.3.9],[http://groups.google.com/group/PCManX])
+AC_INIT([pcmanx-gtk2],[0.3.9],[http://code.google.com/p/pcmanx-gtk2/issues/list])
 
 AC_CONFIG_HEADERS([config.h])
 #AC_PREFIX_DEFAULT(/usr)
@@ -548,7 +548,7 @@ AC_DEFUN([CACHED_TRY_COMPILE],[
 
 dnl GCC_ATTRIBUTE(<short-label>,<cachevar>,<func-params>,<attribute>,<HAVE>,<desc>,[<true-cmds>],[<false-cmds>])
 AC_DEFUN([GCC_ATTRIBUTE],[
-  CACHED_TRY_COMPILE(__attribute__(($1)),cv_c_gcc_attribute_$2,,
+  CACHED_TRY_COMPILE(__attribute__(($1)),ac_cv_c_gcc_attribute_$2,,
    [extern int testfunction($3) __attribute__(($4))],
    AC_MSG_RESULT(yes)
    AC_DEFINE(HAVE_GNUC25_$5,,$6)
